adding images, edits in i3wm config, removed ksnip added flameshot

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -18,8 +18,7 @@ client.focused #6D0C0C #C01D2A #FFFFFF #6D0C0C
 exec brave
 exec kitty
 exec kitty
-exec spotify
-exec --no-startup-id ksnip
+exec --no-startup-id flameshot
 
 # hotkeys
 bindsym $mod+Return exec kitty # terminal
